--- a/trips/pom.xml
+++ b/trips/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>be.vinci.ipl.chattycar</groupId>
-    <artifactId>drivers</artifactId>
+    <artifactId>trips</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>drivers</name>
-    <description>drivers</description>
+    <name>trips</name>
+    <description>trips</description>
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2021.0.4</spring-cloud.version>
