--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ HELP.md
 .settings
 .springBeans
 .sts4-cache
+*.properties
 
 ### IntelliJ IDEA ###
 *.iws
@@ -41,4 +42,5 @@ build/
 !**/src/test/**/build/
 
 ### VS Code ###
+
 .vscode/
