--- a/chattycar-trips-service.yaml
+++ b/chattycar-trips-service.yaml
@@ -111,7 +111,7 @@ paths:
       responses:
         404:
           description: No trip found with this ID
-        201:
+        200:
           description: Trip is deleted
 
   /trips/driver/{id}:
@@ -135,7 +135,7 @@ paths:
           description: ID of the user
       responses:
         404:
-          description: No user found with this ID
+          description: No driver found with this ID
         200:
           description: Sent user driver trips
           content:
@@ -149,8 +149,8 @@ paths:
       summary: Delete all trip where user is the driver
       responses:
         404:
-          description: No trip found with this ID
-        201:
+          description: No driver found with this ID
+        200:
           description: All trips are deleted
 
 components:
@@ -177,7 +177,7 @@ components:
           $ref: '#/components/schemas/position'
         departure_date:
           type: string
-          description: Date in ISO 8601, YYYY-MM-DD
+          description: Date in ISO 8601, YYYY-MM-DD hh:mm:ss
         driver_id:
           type: integer
         available_seating:
@@ -189,7 +189,7 @@ components:
         destination:
           latitude: 50.849372
           longitude: 4.451009
-        departure: 2022-10-24
+        departure: 2022-10-24 10:45:00
         driver_id: 12
         available_seating: 2
 
