--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ buildNumber.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
 *.iml
+.idea
 
 HELP.md
 !.mvn/wrapper/maven-wrapper.jar
